[package]
name = "visnake"
authors = ["Christian Fosli <cfosli@gmail.com>"]
categories = ["wasm"]
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.3"
