[package]
name = "visnake"
authors = ["Christian Fosli <cfosli@gmail.com>"]
categories = ["wasm"]
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
gloo-timers = "0.2"
gloo-events = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "KeyboardEvent",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.3"
