[package]
name = "visnake"
authors = ["Christian Fosli <cfosli@gmail.com>"]
categories = ["wasm"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
highscore-types = { path = "../highscore-types" }

anyhow = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
gloo-dialogs = "0.2"
gloo-events = "0.2"
gloo-timers = "0.3"
gloo-utils = "0.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.15"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
reqwest = { version = "0.12", features = ["json"] }
time = { version = "0.3", features = ["parsing", "serde-well-known"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Headers",
  "HtmlElement",
  "HtmlCanvasElement",
  "KeyboardEvent",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
