[package]
name = "visnake-highscore-api"
authors = ["Christian Fosli <cfosli@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
mongodb = { version = "2", features = ["tracing-unstable"] }
bson = { version = "2", features = ["time-0_3"] }
opentelemetry = "0.19"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["parsing", "serde-well-known"] }
tracing = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = "0.3"
axum-tracing-opentelemetry = "0.11"
init-tracing-opentelemetry = { version = "0.12.0-alpha.0", features = ["tracing_subscriber_ext", "otlp"] }
futures = "0.3"
