[package]
name = "visnake-highscore-api"
authors = ["Christian Fosli <cfosli@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
highscore-types = { path = "../highscore-types" }

axum = { version = "0.8" }
mongodb = { version = "3", features = ["tracing-unstable"] }
bson = { version = "2", features = ["time-0_3"] }
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["parsing", "serde-well-known"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = "0.3"
axum-tracing-opentelemetry = "0.29"
init-tracing-opentelemetry = { version = "0.29", features = ["tracing_subscriber_ext", "otlp", "stdout"] }
futures = "0.3"
