[package]
name = "highscore-cleanup-job"
version = "0.1.0"
edition = "2021"

[dependencies]
highscore-types = { path = "../highscore-types" }

mongodb = { version = "3", features = ["tracing-unstable"] }
bson = { version = "2", features = ["time-0_3"] }
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["parsing", "serde-well-known"] }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = "0.3"
init-tracing-opentelemetry = { version = "0.29", features = ["tracing_subscriber_ext", "stdout"] }
futures = "0.3"
