[package]
name = "highscore-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
serde = "1.0.166"

[features]
# Using feature flag because as per July 2023 a data migration is needed to deserialize
# data stored by earlier (.NET-based) highscore-api implementation
expose_id = []
